--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "cool-ascii-faces": "^1.3.4",
     "firebase": "^7.17.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-router-hash-link": "^2.0.0",
+    "react-router-hash-link": "^2.1.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
